# AalWiNes-1

./: .gitignore  CMakeLists.txt
benchmarking/: CMakeLists.txt  GenerateQueries.cpp  QueryTemplate.cpp  QueryTemplate.h
example_net/: Agis-query.q  standard-queries.qt
moped-bin/: moped
src/: AnalyseNetwork.cpp  CMakeLists.txt  GenerateRouting.cpp  main.cpp  performance_test_main.cpp  test_network_generator_main.cpp  topology_zoo_main.cpp
src/aalwines/: Verifier.h
src/aalwines/engine/: Moped.cpp  Moped.h
src/aalwines/model/: CegarNetworkPdaFactory.h  CegarVerifier.h  EdgeStatus.h  Network.cpp  Network.h  NetworkPDAFactory.h  NetworkTranslation.h  Router.cpp  Router.h  RoutingTable.cpp  RoutingTable.h
src/aalwines/model/builders/: AalWiNesBuilder.h  JuniperBuilder.cpp  NetworkParsing.cpp  NetworkParsing.h  PRexBuilder.cpp  TopologyBuilder.cpp  TopologyBuilder.h
src/aalwines/query/: QueryBuilder.cpp  QueryParser.y
src/aalwines/synthesis/: FastRerouting.h  RouteConstruction.cpp  RouteConstruction.h
src/aalwines/utils/: coordinate.h  ptr_vector.h
test/: Approximation_test.cpp  CMakeLists.txt  JSONFormat_test.cpp  RouteConstruction_test.cpp  SyntacticNetwork_test.cpp  load_cactus.py  load_reduction_times.py  load_running_times.py
test/performance_test_networks/performance-results/: load_running_times.py
topologies_weighted/: Abilene.json  Interoute.json
